@@ -6,6 +6,7 @@
 %Document CPDF_SHOW_EXT for image processing
 %Document "* 500pt" / "500pt *" in -scale-to-fit / -center-to-fit
 %Document -progress
+%Document "annotated" range
 %\DocumentMetadata{lang=en, pdfversion=2.0, pdfstandard=ua-2, pdfstandard=a-4f, testphase={phase-III, title, table, math, firstaid}}
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
